--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Joshua J. Perras</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -17,17 +20,20 @@
 <section class="splash">
     <h1>Joshua Joseph Perras</h1>
     <img src="images/josh-pfp.jpg" alt="Photo of Joshua" style="height: 200px;">
-    <p>2010 Fairway Close Terrace &#9679; Lawrenceville, Georgia 2025 &#9679; 404.704.6703 &#9679; jjp04804@uga.edu</p>
-    <p> I have a passion for programming and software engineering 
+    <p class="addy">2010 Fairway Close Terrace &#9679; Lawrenceville, Georgia 2025 &#9679; 404.704.6703 &#9679; jjp04804@uga.edu</p>
+    <p class="intro"> I have a passion for programming and software engineering 
         that started as writing code to add new items into 
         various games. Since then I have been involved in many projects 
         both personal and professional to foster my love for 
         creating meaningful products that people can enjoy! </p>
 </section>
 <hr>
-<section>
+<section class="education">
     <h2>Education</h2>
-    <p>University of Georgia, Franklin College of Arts & Sciences Athens, GA Bachelors of Science in Computer Science May 2026 GPA: 3.98/4.00 Courses:Software Engineering, Algorithms, Data structures, Systems Programing, Object-Oriented Programming, Computer
+    <p>University of Georgia, Franklin College of Arts & Sciences Athens, GA </p>
+    <p>Bachelors of Science in Computer Science May 2026 </p>
+    <p>GPA: 3.98/4.00 </p>
+    <p class="courses">Courses: Software Engineering, Algorithms, Data structures, Systems Programing, Object-Oriented Programming, Computer
         Architecture
         </p>
 </section>
