dl list styles and fixed redirect for thankyou page

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <hr>
     <form action="https://formsubmit.co/d32c9679f29c3dabbc797e4b8e23aaf1" method="POST">
         Name: <input type="text" name="name">
-        <input type="hidden" name="_next" value="http://127.0.0.1:5500/thankyou.html">
+        <input type="hidden" name="_next" value="https://joshuaperras.github.io/thankyou.html">
         Email: <input type="email" name="email">
         Message: <textarea rows="6" name="message"></textarea>
         <button type="submit">Submit</button>
