More list styles for other lists

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li>Programming Languages: Java, C, HTML, CSS, JavaScript</li>
         <li>Frameworks / Libraries: Node.js, React</li>
         <li>Databases: MongoDB</li>
-        <li>Software: Git, VS Code, Emacs, mobaXterm</li>
+        <li id="last-child">Software: Git, VS Code, Emacs, mobaXterm</li>
     </ul>
 </section>
 <section>
