--- a/contact.html
+++ b/contact.html
@@ -15,18 +15,24 @@
         <p>Joshua J. Perras</p>
         <a href="index.html"><p>About Joshua</p></a>
     </nav>
-    <section>
-        <h1>Contact Joshua Perras</h1>
-        <p>2010 Fairway Close Terrace &#9679; Lawrenceville, Georgia 2025 &#9679; 404.704.6703 &#9679; jjp04804@uga.edu</p>
-    </section>
-    <hr>
-    <form action="https://formsubmit.co/d32c9679f29c3dabbc797e4b8e23aaf1" method="POST">
-        Name: <input type="text" name="name">
-        <input type="hidden" name="_next" value="https://joshuaperras.github.io/thankyou.html">
-        Email: <input type="email" name="email">
-        Message: <textarea rows="6" name="message"></textarea>
-        <button type="submit">Submit</button>
-    </form>
+
+    <div class="one-col">
+        <section class="contact-info">
+            <h1>Contact Joshua Perras</h1>
+            <p>2010 Fairway Close Terrace &#9679; Lawrenceville, Georgia 2025 &#9679; 404.704.6703 &#9679; jjp04804@uga.edu</p>
+        </section>
+        <hr>
+        <form action="https://formsubmit.co/d32c9679f29c3dabbc797e4b8e23aaf1" method="POST">
+            Name: <input type="text" name="name">
+            <input type="hidden" name="_next" value="https://joshuaperras.github.io/thankyou.html">
+            Email: <input type="email" name="email">
+            Message: <textarea rows="6" name="message"></textarea>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+    
+
+
     <footer>
         &copy 
         <a href="index.html">Joshua Perras</a>
