--- a/thankyou.html
+++ b/thankyou.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thank You</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>Thank you for your submission!</p>
-    <a href="index.html"><p>About Joshua</p></a>
-    <a href="contact.html"><p>Contact Joshua</p></a>
+    <nav>
+        <a href="index.html"><p>Joshua J. Perras</p></a>
+        <a href="contact.html"><p>Contact Joshua</p></a>
+    </nav>
+    <h1 class="thankyou">Thank you for your submission!</h1>
+    <a href="index.html" class="thank-link"><p>About Joshua</p></a>
+    <a href="contact.html" class="thank-link"><p>Contact Joshua</p></a>
 </body>
 </html>
