fixed reelmovie project card

--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
         
         <div class="card">
             <img src="images/ReelSS2.png" alt="Photo of Joshua">
-            <h3>Architect Portfolio</h3>
+            <h3>ReelMovies</h3>
             <ul>
-                <li>Developed a responsive portfolio website for an architect to effectively showcase their work and get in contact
-                    with clients</li>
-                <li>Implemented the agile development process, leading to a 30% reduction in project delivery time, with weekly
-                sprints that ensured consistent client feedback and satisfaction ratings exceeding 90%</li>
+                <li>Developed a responsive movie review/rating website where users can search for movies or tv shows through keywords, log-in, save movies to a favorites list, and filter movies by genra</li>
+                <li>Implemented the agile development process while leading a team of 6 developers, as well as managing  system design, software design, 
+                    and software specification documents for our website</li>
                 <li>Gained hands-on experience using React.js, HTML, CSS, and JavaScript, completing over 150 hours of coding,
                 which improved development efficiency and reduced load times by 25%</li>
             </ul>
@@ -91,7 +90,7 @@
             <ul>
                 <li>Served as project team leader for a hand tracking application, successfully managing a team of 4 and developed a hand tracking application that allowed the user to draw with their index finger</li>
                 <li>Utilized OpenCV to accurately track user hand movements, achieving a 95% accuracy rate in point coordinate
-                detection, which enhanced the user experience and responsiveness of the application.</li>
+                detection, which enhanced the user experience and responsiveness of the application</li>
                 <li>Implemented with Python to allow the user to change colors by moving their hand along an eye pleasing GUI</li>
 
             </ul>
